# UniversityFinal

./: .gitignore
core/: CMakeLists.txt  main.cpp
core/client_funcs/: client_funcs.h
core/commands/: commands.cpp  commands.h  data_parsers.cpp  data_parsers.h
core/host_communication/: host_communication.cpp  host_communication.h
core/logs/: logs.cpp  logs.h
core/nodes/: nodes.cpp  nodes.h
core/results/: results.cpp  results.h
core/storage/: storage.cpp  storage.h
core/tasks/: tasks.cpp  tasks.h
core/utils/: utils.cpp  utils.h
exmaple_task/: main.cpp
results/: 4nodes_2cloud_2local.csv  4nodes_2cloud_2local.xlsx  5 nodes_brwser3_cloud2.csv  5 nodes_brwser3_cloud2.xlsx  cloud_node_browser_results.xlsx  cloud_one_node_results.xlsx  cloud_two_nodes_results.xlsx  one_node_shift_1000.csv  one_node_shift_10000.csv
runner/: commands.js  httpServer.js  index.html  index.js  package-lock.json  package.json  wasiWorker.cjs  webSocketsServer.js  webpack.config.cjs
runner/static/: browser.js  client.js  package.json
